--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -27,13 +27,8 @@
 
   margin: 0 auto;
 
-  @media (min-width: 1107px) and (max-width: 1365px) {
+  @media (min-width: 1024px) and (max-width: 1280px) {
     max-width: 840px;
-    padding: 0 60px;
-  }
-
-  @media (min-width: 1025px) and (max-width: 1106px) {
-    max-width: 570px;
     padding: 0 60px;
   }
 
@@ -54,7 +49,7 @@
   flex-shrink: 1;
   width: 260px;
 
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 768px) and (max-width: 1023px) {
     max-width: 309px;
     width: 100%;
   }
