--- a/source/sass/blocks/header-logo.scss
+++ b/source/sass/blocks/header-logo.scss
@@ -1,5 +1,6 @@
 .header-logo {
   line-height: 0;
+  align-self: flex-start;
 }
 
 .header-logo svg {
