--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -31,6 +31,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 34px;
+  gap: 50px;
 
   @media #{$middle-vp} {
     padding: 30px 45px 0;
